[project]
name = "afl-cat-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "polars>=1.30.0",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.13",
    "sqlglot>=26.26.0",
    "streamlit>=1.45.1",
]
